graphql-parser/tests/snapshots/queries__mutation_directive_win.snap
---
source: graphql-parser/tests/queries.rs
expression: result_win
---
Ok(
    Document {
        definitions: [
            Operation(
                Mutation(
                    Mutation {
                        position: Pos(1:1),
                        name: None,
                        variable_definitions: [],
                        directives: [
                            Directive {
                                position: Pos(1:10),
                                name: "directive",
                                arguments: [],
                            },
                        ],
                        selection_set: SelectionSet {
                            span: (
                                Pos(1:21),
                                Pos(3:1),
                            ),
                            items: [
                                Field(
                                    Field {
                                        position: Pos(2:3),
                                        alias: None,
                                        name: "node",
                                        arguments: [],
                                        directives: [],
                                        selection_set: SelectionSet {
                                            span: (
                                                Pos(2:3),
                                                Pos(2:3),
                                            ),
                                            items: [],
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ),
        ],
    },
)
